wp-content/themes/childtwentytwentythree/assets/css/styles.css
/* ... */
@media (min-width: 768px) and (min-width: 992px) {
  .navbar .dropdown ul {
    min-width: 250px;
  }
}
@media (min-width: 1025px) and (max-width: 1366px) {
  .navbar .dropdown .dropdown ul {
    left: -90%;
  }
  .navbar .dropdown .dropdown:hover > ul {
    left: -100%;
  }
}
@media (min-width: 1025px) {
  .mobile-nav-show,
  .mobile-nav-hide {
    display: none;
  }
}
/*--------------------------------------------------------------
  # Mobile Navigation
  --------------------------------------------------------------*/
@media (max-width: 991px) {
  .navbar {
    position: fixed;
    top: 0;
    right: -100%;
    width: 100%;
    max-width: 100%;
    border-left: 1px solid #666;
    bottom: 0;
    transition: 0.3s;
    z-index: 9997;
  }
  .navbar ul {
    position: absolute;
    inset: 0;
    padding: 50px 0 10px 0;
    margin: 0;
    background: var(--color-primary);
    overflow-y: auto;
    transition: 0.3s;
    z-index: 9998;
  }
  .navbar a,
  .navbar a:focus {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 16px 20px;
    font-family: var(--font-secondary);
    border-bottom: 1px solid #640000;
    font-size: 16px;
    font-weight: 600;
    color: var(--color-secondary);
    white-space: nowrap;
    transition: 0.3s;
  }
  .navbar a i,
  .navbar a:focus i {
    font-size: 12px;
    line-height: 0;
    margin-left: 5px;
  }
  .navbar a:hover,
  .navbar li:hover > a {
    color: var(--color-black);
  }
  .navbar .active,
  .navbar .active:focus {
    color: var(--color-black);
    border-color: var(--color-primary);
  }
  .navbar .dropdown ul,
  .navbar .dropdown .dropdown ul {
    position: static;
    display: none;
    padding: 10px 0;
    margin: 10px 20px;
    transition: all 0.5s ease-in-out;
    border: 1px solid #eee;
  }
  .navbar .dropdown > .dropdown-active,
  .navbar .dropdown .dropdown > .dropdown-active {
    display: block;
  }
  .navbar > .menu-lsb-header-menu-container > ul > li::before {
    position: absolute;
    right: 14px;
    top: 14px;
    color: var(--color-white);
  }
  .mobile-nav-show {
    color: var(--color-black);
    font-size: 28px;
    cursor: pointer;
    line-height: 0;
    transition: 0.5s;
    z-index: 9999;
    margin: 0 10px 0 0px;
  }
  .mobile-nav-hide {
    color: var(--color-white);
    font-size: 39px;
    cursor: pointer;
    line-height: 0;
    transition: 0.5s;
    position: fixed;
    right: 14px;
    top: 8px;
    z-index: 9999;
  }
  .mobile-nav-active {
    overflow: hidden;
  }
  .mobile-nav-active .navbar {
    right: 0;
  }
  .mobile-nav-active .navbar:before {
    content: "";
    position: fixed;
    inset: 0;
    background: rgba(255, 255, 255, 0.8);
    z-index: 9996;
  }
  .site-brand a img {
    width: 100%;
    max-width: 330px;
    margin: 0;
    display: block;
  }
  .right-top-header .utility-section {
    padding-left: 0;
    margin: 0px 12px;
  }
  .right-top-header .search-bar {
    margin-left: 0;
  }
  .right-top-header .search-bar input {
    width: 100%;
  }
  .upper-bar {
    max-width: 100%;
  }
  .lower-bar {
    padding: 0 1rem;
  }
}
@media (max-width: 767px) {
  .upper-bar {
    height: auto;
    display: block;
    padding: 14px 0px;
  }
  .site-brand a img {
    margin: 0 auto;
    margin-bottom: 10px;
  }
}
.navbar button.sub-menu-toggle {
  display: none;
}

/*--------------------------------------------------------------
# Footer
--------------------------------------------------------------*/
.footer {
  margin-top: 5rem;
  font-size: 14px;
  background-color: #1f1f24;
  padding: 50px 0;
  color: rgba(255, 255, 255, 0.7);
}
.footer .icon {
  margin-right: 15px;
  font-size: 24px;
  line-height: 0;
}
.footer h4 {
  font-size: 16px;
  font-weight: bold;
  position: relative;
  padding-bottom: 5px;
  color: var(--color-white);
}
.footer .footer-links {
  margin-bottom: 30px;
}
.footer .footer-links ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
.footer .footer-links ul li {
  padding: 10px 0;
  display: flex;
  align-items: center;
}
.footer .footer-links ul li:first-child {
  padding-top: 0;
}
.footer .footer-links ul a {
  color: rgba(255, 255, 255, 0.6);
  transition: 0.3s;
  display: inline-block;
  line-height: 1;
}
.footer .footer-links ul a:hover {
  color: var(--color-white);
}
.footer .social-links a {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: 1px solid rgba(255, 255, 255, 0.2);
  font-size: 16px;
  color: rgba(255, 255, 255, 0.7);
  margin-right: 10px;
  transition: 0.3s;
}
.footer .social-links a:hover {
  color: var(--color-white);
  border-color: var(--color-white);
}

/*--------------------------------------------------------------
# Main Wrapper Area
--------------------------------------------------------------*/
.main-wrapper-area {
  padding-top: 114px;
}

/*--------------------------------------------------------------
# Home Page Css
--------------------------------------------------------------*/

/* ---------auction-partner-section-css------------- */
.auctions-partner-section {
  margin: 0 !important;
  gap: 4px;
}
.auctions-partner-section h4 {
  font-size: 1.15rem;
  text-align: center;
  color: var(--color-white);
  padding: 0.15rem 0;
  margin: 0;
  background: var(--color-primary);
  width: 100%;
}

.auctions-partner-section div {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
}

@media (min-width: 768px) and (max-width: 991.98px) {
  .auctions-partner-section div {
    flex: 0 0 49.7%;
  }
}

.auctions-partner-section div a {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  min-height: 75px;
  color: var(--color-default);
  font-size: 1rem;
  text-decoration: none;
  padding: 0.5rem;
  background: rgba(201, 185, 163, 0.2);
  transition: all 0.3s;
  position: relative;
}
/* ... */

